Переход по сценарию после выбора пользователя
